# simple-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Cli.h
test/: 00CatchInit.cc  01InstantiationTest.cc  02TokenizerTest.cc  03OutputTest.cc  demo.cc
